orb/newsbanner alignment fixes
fixed box-sizing of orb content and fixed alignment of the news banner with the bbc logo in orb on viewport widths < 400px

--- a/source/scss/news_special/_box_sizing.scss
+++ b/source/scss/news_special/_box_sizing.scss
@@ -11,7 +11,7 @@ html{
     box-sizing: inherit;
 }
 
-input {
+input, .b-g-p {
 	-moz-box-sizing: content-box;
     -webkit-box-sizing: content-box;
     box-sizing: content-box;
